--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ Tags: basic, starter
 */
 
 html, body {
-	height: 100%;
+	min-height: 100%;
 }
 
 body {
@@ -30,9 +30,21 @@ body {
 	max-width: 960px;
 	margin-left: auto;
 	margin-right: auto;
-	height: 100%;
+	min-height: 100%;
+	overflow: hidden;
+}
+
+header {
+	background-color: #f60;
+	margin: 1em;
+}
+
+h1.site-title {
+	margin: 0;
+	padding: 0;
 }
 
 .content {
-	border: 1px solid red;
+	padding: 1em;
 }
+
